# CSNeuralNet

./: .gitignore  Answers.txt  AnswersTest.txt  C#N_own.csproj  C#N_own.sln  CS_NeuralNetwork.sln  Config.txt  Data.txt  DataActual.txt  DataFormat.cs  DataTest.txt  GetActualcoefs.py  GetActualcoefs.spec  GetCoefsHistory.py  LICENSE.txt  Layer.cs  Net.cs  README.md  Weights.Json  Weights.txt  config.json
NL_GUI/: 2Main.qml  CMakeCache.txt  CMakeLists.txt  CenteredCircle.qml  ControlPanel.qml  CustomDialog.qml  Layer.qml  Line.qml  Main.qml  NamedPipe.cs  NeuralVisualization.qml  Weights.qml  config_writer.cpp  config_writer.h  main.cpp  main.qml  pipe_controller.cpp  pipe_controller.h  pipe_reader.cpp  pipe_reader.h  pipe_worker.cpp  pipe_worker.h  pipe_writer.cpp  pipe_writer.h
NL_GUI/.qt/: QtDeploySupport.cmake
NL_GUI/.qt_plugins/: Qt6_QmlPlugins_Imports_appNL_GUI.cmake
NL_GUI/.rcc/: qmake_NL_GUI.qrc  qrc_appNL_GUI_raw_qml_0.cpp  qrc_qmake_NL_GUI.cpp
NL_GUI/.rcc/qmlcache/: appNL_GUI_Layer_qml.cpp  appNL_GUI_Line_qml.cpp  appNL_GUI_Main_qml.cpp  appNL_GUI_NeuralLink_qml.cpp  (+2 more)
NL_GUI/CMakeWin/: CMakeCache.txt  Makefile  appnl_gui_qmltyperegistrations.cpp  cmake_install.cmake
NL_GUI/DEPRECATED/: 2Main.qml  main2.cpp  main_test.cpp  write_config.h
NL_GUI/NL_GUI/: Layer.qml  Main.qml  NeuralLink.qml  Neuron.qml  appNL_GUI.qmltypes  appNL_GUI_qml_module_dir_map.qrc
NL_GUI/appNL_GUI_autogen/: moc_predefs.h  mocs_compilation.cpp
NL_GUI/meta_types/: appNL_GUI_json_file_list.txt  appNL_GUI_json_file_list.txt.timestamp  qt6appnl_gui_release_metatypes.json
(+46 files in other folders)
